fixed imgages overflow

--- a/src/components/PropertyListing/PropertyListing.scss
+++ b/src/components/PropertyListing/PropertyListing.scss
@@ -177,4 +177,8 @@
   .col-md-6.extras_2 {
     padding-left: 32px;
   }
+
+  img.advert_img {
+    width: 100%;
+  }
 }
